--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,17 @@ body {
   margin: 0;
   height: 100vh;
 }
+
+input {
+  background-color: #4c2885;
+  border: 10px;
+  border: none;
+  box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
+    0 15px 40px rgba(0, 0, 0, 0.1);
+  color: white;
+  font-family: inherit;
+  font-size: 1rem;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  width: 400px;
+}
