--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,10 @@ input:focus {
   padding: 3rem;
   width: 800px;
 }
+
+.avatar {
+  border: 10px solid #2a2a72;
+  border-radius: 50%;
+  height: 150px;
+  width: 150px;
+}
