--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,15 @@ input:focus {
   font-size: 0.9;
   margin-left: 0.5rem;
 }
+
+.repositories {
+  background-color: #2a2a72;
+  border-radius: 5px;
+  display: inline-block;
+  color: white;
+  font-size: 0.7rem;
+  padding: 0.25rem 0.5rem;
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+  text-decoration: none;
+}
